Ajout des cartes sans css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div>
+        <div class="card">
+            <div><img src="./public/img/home-resized-412x250-1.png" alt=""></div>
+            <div>
+                <h3>Coworking</h3>
+                <button>En savoir plus</button>
+            </div>
+        </div>
+        <div class="card">
+            <div><img src="./public/img/99136680_560485194860921_8273081797873500160_n.jpg" alt=""></div>
+            <div>
+                <h3>Formation</h3>
+                <button>En savoir plus</button>
+            </div>
+        </div>
+        <div class="card">
+            <div><img src="./public/img/99419910_537426700287206_6976711310452981760_n.jpg" alt=""></div>
+            <div>
+                <h3>Evenement</h3>
+                <button>En savoir plus</button>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
